--- a/src/Shared/Shared/Shared.csproj
+++ b/src/Shared/Shared/Shared.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+  <PackageReference Include="Mapster" Version="7.4.0" />
   </ItemGroup>
 
 </Project>
